Fixes for floating pane on IE, so the resize bar doesn't appear misaligned.
IE runs in strict mode or compatibility mode (compatibility mode is the default),
depending on the header at the top of the html page.
One difference is whether or not width:100% includes the borders.

Ideally dojo should support both modes, but I think to do that we will need
to use css expressions to do that (?).  Anyway, for now I am (reluctantly)
checking in a version that supports IE in compatibility mode only.

Subject to change later.

git-svn-id: http://svn.dojotoolkit.org/src/trunk@3258 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/widget/templates/HtmlFloatingPane.css
+++ b/src/widget/templates/HtmlFloatingPane.css
@@ -1,26 +1,28 @@
 
 .dojoFloatingPane {
+	/* essential css */
 	position: absolute;
-	border: 1px solid;
-	border-color: ThreeDHighlight ThreeDShadow ThreeDShadow ThreeDHighlight;
 	overflow: visible;		/* so drop shadow is displayed */
 	z-index: 5;
-	background-color: ThreeDFace;
 	-moz-box-sizing: border-box;
 	-khtml-box-sizing: border-box;
-}
-
-.dojoTitleBarIcon {
-	height: 22px;
-	width: 22px;
-	vertical-align: middle;
-	float: left;
-	margin-right: 5px;
+	
+	/* styling css */
+	border: 1px solid;
+	border-color: ThreeDHighlight ThreeDShadow ThreeDShadow ThreeDHighlight;
+	background-color: ThreeDFace;
 }
 
 .dojoFloatingPaneTitleBar {
-	vertical-align: middle;
+	/* essential css */
 	z-index: 2;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+
+	/* styling css */
+	vertical-align: middle;
 	height: 22px;
 	color: CaptionText;
 	font: small-caption;
@@ -56,22 +58,32 @@
 
 /* bar at bottom of window that holds resize handle */
 .dojoFloatingPaneResizebar {
-	z-index: 2;
+	/* essential css */
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
 	height: 13px;
+	z-index: 2;
+	
+	/* styling css */
 	background-color: ThreeDFace;
 }
 
+/* the part that holds the actual content of the floating pane (text or whatever) */
 .dojoFloatingPaneClient {
-	border: 1px solid;
-	border-color: ThreeDShadow ThreeDHighlight ThreeDHighlight ThreeDShadow;
-	background-color: ThreeDFace;
-	/*padding: 8px;*/
-	font-family: Verdana, Helvetica, Garamond, sans-serif;
-	font-size: 12px;
+	/* essential css */
+	position: relative;
 	width: 100%;
 	height: 100%;
-	overflow: auto;
 	-moz-box-sizing: border-box;
 	-khtml-box-sizing: border-box;
 	z-index: 2;
+	overflow: auto;
+	
+	/* styling css */
+	background-color: ThreeDFace;
+	padding: 8px;
+	font-family: Verdana, Helvetica, Garamond, sans-serif;
+	font-size: 12px;
 }
